--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -27,6 +27,7 @@
     </activity>
     <activity android:name="com.facebook.unity.FBUnityDeepLinkingActivity" android:exported="true">
     </activity>
-    <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="\ 752291714818823" />
+    <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="\ 663004020478732" />
+    <activity android:name="com.soomla.profile.social.twitter.SoomlaTwitter$SoomlaTwitterActivity" android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
   </application>
 </manifest>
